--- a/FinalProjectSeminar/app/src/main/res/layout/row_comment.xml
+++ b/FinalProjectSeminar/app/src/main/res/layout/row_comment.xml
@@ -41,6 +41,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Text Comment Goes Here"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:textColor="#969595"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
